<resources>
    <string name="app_name">intentencionesClase4</string>

    <string name="btnWeb">Abrir pagina web</string>
    <string name="btnPhone">Llamada de telefono</string>
    <string name="btnMap">Google Maps</string>
    <string name="btnPhoto">Tomar Foto</string>
    <string name="btnEmail">Enviar correo</string>
    <string name="btnViewPhotos">Ver lista de fotos</string>
    <string name="imagedesc">descripcion de la imagen</string>
    <string name="btnSettings">Leer Ajustes</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>