<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onBtnWebClick"
        android:text="@string/btnWeb" />

    <Button
        android:id="@+id/btnPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onBtnPhoneClick"
        android:text="@string/btnPhone" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnSettingsClick"
        android:text="@string/btnSettings" />

    <Button
        android:id="@+id/btnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onBtnMapClick"
        android:text="@string/btnMap" />

    <Button
        android:id="@+id/btnPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onBtnPhotoClick"
        android:text="@string/btnPhoto" />

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onBtnEmailClick"
        android:text="@string/btnEmail" />

    <Button
        android:id="@+id/btnViewPhotos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onBtnPhotoGalleryClick"
        android:text="Ver lista de Fotos" />

    <EditText
        android:id="@+id/edPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:background="?android:attr/listDivider" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imagedesc" />
</LinearLayout>
